# informer_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.processor  README.md  README_RU.md  TODO.md  compose.processor.yaml  compose.yaml  login.py  pyproject.toml
.github/workflows/: ci.yml
data/: .env.example
docs/: auto-update.md  docker.md  embeddings.md  features.md  features_ru.md  miniapp-hosting.md  processor-bot.md  setup.md  tests.md  usage.md
docs/internals/: architecture.md  auto-delete.md  behaviour.md  dedup.md  env-vars.md  layout.md  miniapp.md  pitfalls.md  processor-bot.md  review-2026-05-07.md  storage.md  todos.md
informer_bot/: album.py  bot.py  cli_login.py  client.py  config.py  db.py  dedup.py  fallback_dispatcher.py  i18n.py  login_sessions.py  main.py  modes.py  pipeline.py  provider_clients.py  remote_processor.py  summarizer.py  throttle.py  webapp.py
processor_bot/: __main__.py  bot.py  config.py  handlers.py  main.py
scripts/: clean-caches.sh  deploy-processor.sh  deploy.sh  install-cron-processor.sh  install-cron.sh
shared/: protocol.py
tests/: test_album.py  test_bot_handlers.py  test_cli_login.py  test_client.py  test_config.py  test_db.py  test_dedup.py  test_fallback_dispatcher.py  test_main.py  test_pipeline.py  test_processor_bot.py  test_processor_config.py  test_processor_handlers.py  test_processor_main.py  test_protocol.py  test_provider_clients.py  test_remote_processor.py  test_summarizer.py  test_webapp.py
webapp/: app.js  index.html  style.css
